--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -1,5 +1,6 @@
 .page-wrapper .navbar {
   width: calc(100% - #{$sidebar-width-lg});
+//   width: 100%;
   height: $navbar-height;
   padding: 0;
   position: fixed;
@@ -14,18 +15,17 @@
 .navbar {
   // width: calc(100% - #{$sidebar-width-lg});
   // height: $navbar-height;
-  background: $card-bg;
+  background: $primary-green;
   border-bottom: 1px solid $border-color;
   display: flex;
   align-items: center;
   // padding: 0;
   // position: fixed;
   // right: 0;
-  // left: $sidebar-width-lg;
+//   left: $sidebar-width-lg;
   z-index: 978;
   box-shadow: 3px 0 10px 0 rgba(183,192,206,.2);
   transition: width .1s ease, left .1s ease;
-
   @media(max-width: 991px) {
     // width: 100%;
     // left: 0;
@@ -33,7 +33,14 @@
       width: calc(100% - #{$sidebar-folded-width} - 1px);
     }
   }
-
+  .navbar-nav .nav-link{
+    color: $secondary-yellow;
+    //border-bottom if active
+    &.active{
+      color: $secondary-yellow;
+      border-bottom: 2px solid $secondary-yellow;
+    }
+  }
   .sidebar-toggler {
     height: 100%;
     border-right: 1px solid $border-color;
@@ -46,7 +53,7 @@
       color: $text-muted;
     }
     @media(max-width: 991px) {
-      display: flex;    
+      display: flex;
     }
   }
 
