--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -16,6 +16,10 @@ $gray-900:     #060c17 !default;
 $black:        #000 !default;
 $text-muted:   $gray-600 !default;
 
+// mycolor
+$primary-green : #023b2a !default;
+$secondary-yellow : #c1a92d !default;
+
 
 // Bootstrap custom colors
 $blue:    #0d6efd !default;
@@ -25,7 +29,7 @@ $pink:    #d63384 !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #198754 !default;
+$green:   #296f42 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
 
@@ -157,7 +161,7 @@ $action-transition-timing-function: ease;
 // Font, line-height, and color for body text, headings, and more.
 
 // Font family
-$font-family-sans-serif:           "Roboto", Helvetica, sans-serif !default;
+$font-family-sans-serif:           "Lora", serif !default;
 
 $font-size-base:              		 0.875rem !default;   // 14px
 $font-size-lg:               	 		 1rem !default;       // 16px
@@ -174,12 +178,12 @@ $font-weight-base:                 $font-weight-normal !default;
 
 
 // Heading sizes
-$h1-font-size:                     2.5rem !default;  
-$h2-font-size:                     2rem !default;   
-$h3-font-size:                     1.5rem !default;  
-$h4-font-size:                     1.25rem !default;  
-$h5-font-size:                     1rem !default;  
-$h6-font-size:                     $font-size-base !default; 
+$h1-font-size:                     2.5rem !default;
+$h2-font-size:                     2rem !default;
+$h3-font-size:                     1.5rem !default;
+$h4-font-size:                     1.25rem !default;
+$h5-font-size:                     1rem !default;
+$h6-font-size:                     $font-size-base !default;
 
 $headings-margin-bottom:      0 !default;
 $headings-font-weight:        500 !default;
@@ -351,3 +355,7 @@ $navbar-height: 60px;
 $sidebar-width-lg: 240px;
 $sidebar-folded-width: 70px;
 $sidebar-dark-bg: #0c1427;
+
+
+// main content full width
+$main-content-full-width: 100%;
