--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -1,6 +1,9 @@
 // Write your custom css/scss here
 $body-bg: #f8fafc;
-
+// btn-custom
+.bg-teal {
+  background-color: $teal;
+}
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
@@ -23,7 +26,6 @@ $overlay-opacity: 0.7;
 }
 .header{
     position: relative;
-
     padding-top: calc(8rem + 60px);
     padding-bottom: 10rem;
     background: no-repeat center;
@@ -31,9 +33,8 @@ $overlay-opacity: 0.7;
     background-size: cover;
     background-attachment: scroll;
 
-
     &:before {
-        content: "";
+        content: '';
         position: absolute;
         top: 0;
         left: 0;
@@ -64,4 +65,11 @@ $overlay-opacity: 0.7;
         margin-top: 0.625rem;
         font-family: $font-family-base;
     }
+}
+
+
+// article
+ .turtle-story {
+    font-family: $font-family-base;
+    text-align: justify;
 }
