--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -15,10 +15,22 @@ $gray-800:     #212a3a !default;
 $gray-900:     #060c17 !default;
 $black:        #000 !default;
 $text-muted:   $gray-600 !default;
+$green-100:    #f0fff4 !default;
+$green-200:    #c6f6d5 !default;
+$green-300:    #9ae6b4 !default;
+$green-400:    #68d391 !default;
+$green-500:    #48bb78 !default;
+$green-600:    #38a169 !default;
+$green-700:    #2f855a !default;
+$green-800:    #276749 !default;
+$green-900:    #22543d !default;
+
+
 
 // mycolor
 $primary-green : #023b2a !default;
 $secondary-yellow : #c1a92d !default;
+$green-secondary : #144900 !default;
 
 
 // Bootstrap custom colors
