--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -35,7 +35,7 @@
 
   .navbar-nav .nav-link{
     font-family: $font-family-base;
-    color: $gray-700;
+    color: $gray-500;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     &:hover {
         color: $teal;
@@ -44,6 +44,7 @@
     //border-bottom if active
     &.active{
         border-bottom: 1px solid $teal;
+        color: $teal;
     }
   }
   .fixed-top .scrolled{
