--- a/resources/sass/components/_buttons.scss
+++ b/resources/sass/components/_buttons.scss
@@ -12,7 +12,7 @@
     font-size: $btn-font-size-xs;
   }
 
-  // Buttons with only icons 
+  // Buttons with only icons
   &.btn-icon {
     width: 38px;
     height: 38px;
@@ -46,7 +46,7 @@
     }
   }
 
-  // Buttons with icon and text 
+  // Buttons with icon and text
   &.btn-icon-text {
     .btn-icon-prepend {
       margin-right: .5rem;
@@ -93,9 +93,23 @@
   }
 }
 
-// Inverse buttons 
+// Inverse buttons
 @each $color, $value in $theme-colors {
   .btn-inverse-#{$color} {
     @include button-inverse-variant($value);
+  }
+}
+
+// btn-variant
+@each $color, $value in $colors {
+  .btn-#{$color} {
+    @include btn-variant($value);
+  }
+}
+
+//custom green color
+@each $color, $value in $green-colors {
+  .btn-green-#{$color} {
+    @include green-color($value);
   }
 }
