--- a/resources/sass/mixins/_buttons.scss
+++ b/resources/sass/mixins/_buttons.scss
@@ -33,7 +33,7 @@ color: $color;
   background-image: none;
   border-color: rgba($color, 0);
   &:not(.btn-inverse-light) {
-    color: $color;      
+    color: $color;
   }
   &:hover,
   &.active,
@@ -52,5 +52,31 @@ color: $color;
   &:disabled {
     color: $color;
     background-color: transparent;
+  }
+}
+
+// add bootstrap 5 button classes
+@mixin btn-variant($color) {
+  background-color: $color;
+  border-color: $color;
+  color: $white;
+  &:hover,
+  &:focus {
+    background-color: darken($color, 10%);
+    border-color: darken($color, 10%);
+    color: $white;
+  }
+}
+
+// custom green-color
+@mixin green-color($color) {
+  background-color: $color;
+  border-color: $color;
+  color: $white;
+  &:hover,
+  &:focus {
+    background-color: darken($color, 10%);
+    border-color: darken($color, 10%);
+    color: $white;
   }
 }
